Fixed: Content overflow (tooltip) Fixed: Wrong event triggered in client personal_change.php

--- a/gui/themes/default/assets/css/ui.css
+++ b/gui/themes/default/assets/css/ui.css
@@ -1311,10 +1311,8 @@ table .graph {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    max-width: 90%;
-    text-wrap: none;
-    word-wrap:break-word;
-    white-space:pre
+    max-width: 30%;
+    word-wrap: break-word;
 }
 .ui-tooltip.ui-tooltip-notice {
     padding-left: 45px;
